# core

./: .env.example  .gitignore  .gitmodules  .prettierrc  README.md  configs.json  initialize.sh  initialize_factory.sh  initialize_pair.sh  interact_futurenet.sh  package.json  preview_version.json  quickstart.sh  run.sh  serve_with_docker.sh  soroban_token_contract.wasm  tsconfig.json  vercel.json
.github/workflows/: release.yml
api/: package.json  server.js
contracts/: Makefile
contracts/UniswapV2/: README.md  UniswapV2Pair.sol
contracts/aggregator/: Cargo.toml  Makefile  README.md
contracts/aggregator/src/: error.rs  event.rs  lib.rs  models.rs  storage.rs  test.rs
contracts/aggregator/src/dex_interfaces/: mod.rs  phoenix_interface.rs  soroswap_interface.rs
contracts/aggregator/src/test/: get_protocols.rs  initialize.rs  swap.rs  update_protocols.rs
contracts/dummy/: Cargo.toml
contracts/dummy/src/: dummy_contract.rs  lib.rs
contracts/factory/: Cargo.toml  Makefile
contracts/factory-interface/: Cargo.toml
contracts/factory/UniswapV2/: README.md  UniswapV2Factory.sol
contracts/factory/src/: event.rs  lib.rs  pair.rs  storage.rs  test.rs
contracts/factory/src/test/: deterministic.rs  events.rs  fee_to_setter.rs  initialize.rs  pairs.rs
contracts/fixed-point-math/: Cargo.toml  README.md
contracts/fixed-point-math/src/: lib.rs
contracts/increment/: Cargo.toml
contracts/pair/: CONTRACT.JSON  Cargo.toml  Makefile  README.md
contracts/pair/UniswapV2/: README.md
contracts/pair/src/: balances.rs  error.rs  event.rs  factory.rs  factory_mock.rs  lib.rs  math.rs  storage.rs  strings.rs  test.rs  uq64x64.rs
contracts/pair/src/soroswap_pair_token/: admin.rs  allowance.rs  balance.rs  contract.rs  internal_fn.rs  mod.rs  storage_types.rs  total_supply.rs
contracts/pair/src/test/: .helpers.rs.swp  decode.rs  deposit.rs  events.rs  fee.rs  helpers.rs  initialize.rs  initialize_pair.rs  operations.rs  operations_helpers.rs  skim.rs  soroswap_pair_token.rs  swap.rs  sync.rs  withdraw.rs
contracts/pair/src/test/create/: mod.rs
contracts/pair/src/test/unused_files/: helpers.rs  operations.rs  operations_helpers.rs
contracts/pair/src/token/: admin.rs  allowance.rs  balance.rs  contract.rs  event.rs  internal_burn.rs  internal_fn.rs  internal_mint.rs  mod.rs
contracts/router/: Cargo.toml  Makefile  README.md
contracts/router/UniswapV2/libraries/: UniswapV2Library.sol
contracts/router/src/: error.rs  event.rs  factory.rs  lib.rs  pair.rs  soroswap_library_functions.rs  storage.rs  test.rs
contracts/router/src/test/: add_liquidity.rs  budget.rs  events.rs  initialize.rs  library_functions.rs  phishing_attack.rs  remove_liquidity.rs  swap.rs  swap_esteblock.rs  swap_exact_tokens_for_tokens.rs  swap_tokens_for_exact_tokens.rs
contracts/router_transfer_from/: Cargo.toml  Makefile
contracts/token/: Cargo.toml  Makefile  README.md  soroban_token_contract.wasm
contracts/token-malicious/: Cargo.toml  Makefile
factory/: Cargo.toml
factory/UniswapV2/: UniswapV2Factory.sol
factory/src/: event.rs  lib.rs  pair.rs  test.rs
pair/: Cargo.toml
pair/UniswapV2/: README.md  UniswapV2Pair.sol
pair/src/: event.rs  factory.rs  lib.rs  test.rs  uq64x64.rs
pair/src/compiledtoken/: mod.rs
pair/src/create/: mod.rs
pair/src/newtoken/: admin.rs  allowance.rs  balance.rs  contract.rs  metadata.rs  mod.rs  test.rs
pair/src/token/: admin.rs  allowance.rs  balance.rs  contract.rs  internal_burn.rs  internal_mint.rs  mod.rs
public/: all_tokens.json  factory.json  mainnet.contracts.json  pairs.json  random_tokens.json  router.json  standalone.contracts.json  testnet.contracts.json  token_admin_keys.json  tokens.json
public/backup-2024-02-15/: factory.json  random_tokens.json  tokens.json
public/backup-2024-03-04/: factory.json  random_tokens.json  router.json  tokens.json
public/backup-2024-05-16/: random_tokens.json
public/backup-2024-09-18/: random_tokens.json  testnet.contracts.json  tokens.json
public/backup-2024-12-10/: testnet.contracts.json
public/backup-2025-03-21/: tokens.json
public/backup-2025-06-19/: random_tokens.json  testnet.contracts.json  tokens.json
public/backup-2025-07-18/: random_tokens.json
scripts/: add_liquidity.sh  add_liquidity_n_pairs.sh  address_to_hex.js  check_how_many_pairs.sh  create_pair.sh  create_token.sh  deploy.ts  deploy_initialize_aggregator.sh  deploy_initialize_factory.sh  deploy_initialize_router.sh  deploy_pairs.sh  deploy_random_tokens.sh  deploy_random_tokens.ts  deploy_soroban_test_tokens.ts  deploy_stellar_test_tokens.ts  deploy_token.ts  deploy_tokens_n_pairs.sh  initialize_factory.sh  initialize_pair.sh  issue_stellar_assets.js  mint_token.ts  mint_tokens.sh  multi_add_liquidity.sh  multi_add_liquidity.ts  network_configs.sh  package.json  populate_network.sh  quickstart.sh  run.sh  runTest.sh  see_trustlines.ts  serve_with_docker.sh  set_trustlines.ts  setup.sh  setup.ts  setup_and_create_tokens.sh  setup_native_token.ts  setup_stellar_classic_assets.sh  stellar_classic_assets.json  stellar_mint_asset_test.js  (+6 more)
scripts/aggregator/: README.md  get_admin.sh  get_protocols.sh  swap_test.sh  update_protocols.sh
scripts/api/: server.js
scripts/experimental/: swap.ts
scripts/initialize_scripts/: initialize.sh  initialize_factory.sh  initialize_pair.sh  interact_futurenet.sh
scripts/manual_testing/: addLiquidity.ts  add_liquidity.sh  all.sh  all.ts  deployStellarAsset.js  generate_user.sh  get_token_balances_and_reserves.sh  issue_stellar_asset.sh  mint.sh  mint.ts  removeLiquidity.ts  remove_liquidity.sh  setup.sh  swap.sh  swap.ts  utils.sh
scripts/old_bash/: OLD_README.md  add_liquidity.sh  address_workaround.js  check_how_many_pairs.sh  create_pair.sh  create_token.sh  deploy_initialize_factory.sh  deploy_initialize_router.sh  deploy_random_tokens.sh  deploy_tokens_n_pairs.sh  issue_stellar_assets.js  mint_tokens.sh  setup_stellar_classic_assets.sh  (+3 more)
token/: Cargo.toml  README.md
utils/: address_book.ts  contract.ts  env_config.ts  index.ts  tokens_book.ts  tx.ts
(+58 files in other folders)
