[package]
name = "dummy-contract"
version = "0.0.3"
edition = "2021"
description = "desc"
license = "MIT"


[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0-rc2"

[dev_dependencies]
soroban-sdk = { version = "20.0.0-rc2", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]