[package]
name = "soroswap-factory"
version = "0.0.2"
authors = ["esteblock <esteblock@paltalabs.io>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "22.0.8" }
num-integer = { version = "0.1.46", default-features = false, features = ["i128"] }
soroswap-factory-interface = { path = "../factory-interface" }

[dev-dependencies]
soroban-sdk = { version = "22.0.8", features = ["testutils"] }
soroswap-factory-interface = { path = "../factory-interface" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
