[package]
name = "soroswap-pair"
version = "0.0.1"
authors = ["esteblock <esteblock@paltalabs.io>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "20.0.0-rc2" }
soroban-token-sdk = { version = "20.0.0-rc2" }
num-integer = { version = "0.1.45", default-features = false, features = ["i128"] }
soroswap-factory-interface={ path="../factory-interface", version="0.0.1", package="soroswap-factory-interface" }


[dev_dependencies]
soroban-sdk = { version = "20.0.0-rc2", features = ["testutils"] } 
soroswap-factory-interface={path="../factory-interface"}

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true